--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.49",
         "tailwindcss": "^3.4.14",
-        "vite": "^5.0.0"
+        "vite": "^6.2.0"
+    },
+    "dependencies": {
+        "flyonui": "^1.3.0"
     }
 }
