--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,15 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "barryvdh/laravel-dompdf": "^3.1",
         "diglactic/laravel-breadcrumbs": "^10.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "2.11",
+        "maatwebsite/excel": "^3.1",
+        "spatie/laravel-backup": "^8.8",
         "spatie/laravel-permission": "^6.18"
     },
     "require-dev": {
